# kata-rene-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
app/: config.py  main.py
app/db/: session.py
app/models/: __init__.py  dictionary.py
app/routers/: dictionary.py  nth_letter.py  shopping.py
app/schemas/: dictionary.py  nth_letter.py  shopping.py
app/services/: dictionary_service.py  nth_letter_service.py  shopping_service.py
data/: .gitkeep
tests/: conftest.py  test_dictionary.py  test_health.py  test_nth_letter.py  test_shopping.py
